5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1635_1054.log
== TEST (2019-04-08 14:25:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))
if (2*x + y = 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (2*x + y = 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:26:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))
if (2*x) + y = 3)):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (2*x) + y = 3)):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:31:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- OUTPUT:
ponto pertencente a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:31:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- EXECUTION TIME:
0.135835
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:31:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- OUTPUT:
ponto pertencente a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:31:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- EXECUTION TIME:
0.157923
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:31:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- OUTPUT:
ponto pertencente a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:31:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta"
else:
	mensagem = " ponto nao pertencente a reta"
print(mensagem)
-- EXECUTION TIME:
0.128446
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:32:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta "
else:
	mensagem = " ponto nao pertencente a reta "
print(mensagem)
-- OUTPUT:
ponto pertencente a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta "
else:
	mensagem = " ponto nao pertencente a reta "
print(mensagem)
-- EXECUTION TIME:
0.179261
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta "
else:
	mensagem = " ponto nao pertencente a reta "
print(mensagem)
-- EXECUTION TIME:
0.21055
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:32:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta "
else:
	mensagem = " ponto nao pertencente a reta "
print(mensagem)
-- OUTPUT:
ponto pertencente a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual a coordenada x: "))
y = float(input("Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertencente a reta "
else:
	mensagem = " ponto nao pertencente a reta "
print(mensagem)
-- EXECUTION TIME:
0.163292
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertencente a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertencente a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:33:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input(" Qual a coordenada x: "))
y = float(input(" Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertence a reta "
else:
	mensagem = " ponto nao pertence a reta "
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:33:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input(" Qual a coordenada x: "))
y = float(input(" Qual a coordenada y: "))

if (2 * x + y == 3):
	mensagem = " ponto pertence a reta "
else:
	mensagem = " ponto nao pertence a reta "
print(mensagem)
-- EXECUTION TIME:
0.132253
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
